tests/snapshots/run_wpt_conformance__litert_reduceMin_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float32 0D tensor empty axes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f32[];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
