tests/snapshots/run_wpt_conformance__litert_reduceMin_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float32 1D constant tensor empty axes",
    "litert",
    "PASS",
)
