tests/snapshots/run_wpt_conformance__litert_reduceMin_float32_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float32 1D tensor default options",
    "litert",
    "PASS",
)
